stopped overflow coming from sliding human illustrations in splash screen

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body,
 html,
 #root {
   height: 100%;
+  width: 100%;
+  max-width: 100%;
   overflow: hidden;
 }
 
